--- a/view/index.html
+++ b/view/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon" />
     <title>{{.base.Tdk.Title}}-DAOAtlas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
@@ -93,7 +94,7 @@
                                 <img src="{{$v.Pic}}" alt="">
                             </div>
                             <h4>{{$v.Title}}</h4>
-                            <p class="clr9">{{$v.ID}} Members | Investment</p>
+                            <p class="clr9">{{$v.Title}} Members | Investment</p>
                         </div>
                         <p class="px-4 p-cnt fs15">{{$v.Content}}</p>
                         <div class="d-flex justify-content-center more-btn">
