fix daodetail --被别人覆盖了，恼火

--- a/view/index.html
+++ b/view/index.html
@@ -94,7 +94,7 @@
                                 <img src="{{$v.Pic}}" alt="">
                             </div>
                             <h4>{{$v.Title}}</h4>
-                            <p class="clr9">{{$v.Title}} Members | Investment</p>
+                            <p class="clr9">{{$v.ID}} Members | Investment</p>
                         </div>
                         <p class="px-4 p-cnt fs15">{{$v.Content}}</p>
                         <div class="d-flex justify-content-center more-btn">
