--- a/view/daoDetail.html
+++ b/view/daoDetail.html
@@ -16,9 +16,9 @@
         {{template "nav.html" .}}
     </div>
     <div class="container page">
-        <nav>DAOs / DeveloperDAO <nav>
+        <nav>DAOs / {{.view.Title}} <nav>
                 <div class="dao-head row  mt-5 mb-5">
-                    <div class="col-md-2 text-center"><img class="img-fluid" src="/static/imgs/logo-daos.png" alt=""></div>
+                    <div class="col-md-2 text-center"><img class="img-fluid" src="{{.view.Pic}}" alt=""></div>
                     <div class="col-md-3">
                         <h2 class="mt-4 text-center">{{.view.Title}}</h2>
                         <div class="mt-4 text-center">
