commnet 4min and add blank link

--- a/view/daoDetail.html
+++ b/view/daoDetail.html
@@ -22,10 +22,10 @@
                     <div class="col-md-3">
                         <h2 class="mt-4 text-center">{{.view.Title}}</h2>
                         <div class="mt-4 text-center">
-                            <a class="px-2" href="{{.daoAttr.Website}}"><img src="/static/imgs/website.png" alt=""></a>
-                            <a class="px-2" href="{{.daoAttr.Twitter}}"><img src="/static/imgs/logo-twitter.png" alt=""></a>
-                            <a class="px-2" href="{{.daoAttr.Discord}}"><img src="/static/imgs/logo-discord.png" alt=""></a>
-                            <a class="px-2" href="{{.daoAttr.Wiki}}"><img src="/static/imgs/wikipedia.png" alt=""></a>
+                            <a class="px-2" href="{{.daoAttr.Website}}" target='_blank'><img src="/static/imgs/website.png" alt=""></a>
+                            <a class="px-2" href="{{.daoAttr.Twitter}}" target='_blank'><img src="/static/imgs/logo-twitter.png" alt=""></a>
+                            <a class="px-2" href="{{.daoAttr.Discord}}" target='_blank'><img src="/static/imgs/logo-discord.png" alt=""></a>
+                            <a class="px-2" href="{{.daoAttr.Wiki}}" target='_blank'><img src="/static/imgs/wikipedia.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-md-4"></div>
