--- a/view/index.html
+++ b/view/index.html
@@ -38,7 +38,7 @@
                             <!-- <td class="py-3">{{$v.ID}}</td> -->
                             <!-- <td class="py-3"></td> -->
                             <td class="py-3"><a class="text-dark text-decoration-none" href="/view/{{$v.ID}}">{{$v.Title}}</a> </td>
-                            <td class="py-3 text-muted"><small>4 min read</small></td>
+                            <!-- <td class="py-3 text-muted"><small>4 min read</small></td> -->
                         </tr>
                         {{end}}
                     </tbody>
@@ -54,7 +54,7 @@
                        
                         <div class="p-4 news-card-2" style="background-image: url('/static/upload/images/20220103/1641218781696.png')">
                             <h5 class="card-title">{{(index .hotPosts 0 ).Title}}</h5>
-                            <small>4 min read</small>
+                            <!-- <small>4 min read</small> -->
                             <h2 class="mt-4">Hot Post Today.</h2>
                         </div>
                     
@@ -65,7 +65,7 @@
                         <tr>
                             <!-- <td class="py-3">{{$v.ID}}</td> -->
                             <td class="py-3"><a rel="bookmark" class="text-dark text-decoration-none" title="{{$v.Title}}" href="/view/{{$v.ID}}">{{$v.Title}}</a> </td>
-                            <td class="py-3 text-muted"><small>4 min read</small></td>
+                            <!-- <td class="py-3 text-muted"><small>4 min read</small></td> -->
                         </tr>
                         {{end}}
                     </tbody>
