--- a/static/view/admin_addview.html
+++ b/static/view/admin_addview.html
@@ -95,7 +95,7 @@
                         <span class="c-red">*</span>文章场景：</label>
                     <div class="formControls col-xs-8 col-sm-9">
                         <input :disabled="isEdit" type="radio" id="base" :value="1" v-model="arcdata.scenes"> 普通文章
-                        <input :disabled="isEdit" type="radio" id="dao" :value="2" v-model="arcdata.scenes"> Dao文章
+                        <input :disabled="isEdit" type="radio" id="dao" :value="2" v-model="arcdata.scenes"> Dao文章33
                     </div>
                 </div>
 
@@ -154,7 +154,7 @@
             </div>
         </article>
 
-        <div id="ossfile">你的浏览器不支持flash,Silverlight或者HTML5！</div>
+        <!-- <div id="ossfile">你的浏览器不支持flash,Silverlight或者HTML5！</div> -->
 
         <div id="container" style="padding-top:20px">
             <div style="display:none;">
