--- a/view/jobs.html
+++ b/view/jobs.html
@@ -40,7 +40,7 @@
             <a  href="" target="_blank">
                 <img src="/static/mirror.png" width="31" height="35"></img>
             </a>
-            <a class="px-3" href=""><i class="bi bi-github"target="_blank"></i></a>
+            <a class="px-3" href="https://github.com/DAO-collection/DAOatlas"><i class="bi bi-github"target="_blank"></i></a>
         </div>
         <div class="container copy border-top mt-5 pt-3 d-flex  justify-content-between">
             <div class="text-muted f12 ">&copy2021 DAOAtlas </div>
