delete share button

--- a/view/daoDetail.html
+++ b/view/daoDetail.html
@@ -29,11 +29,11 @@
                         </div>
                     </div>
                     <div class="col-md-4"></div>
-                    <div class="col-md-3 pt-5 text-center">
+                    <!-- <div class="col-md-3 pt-5 text-center">
                         <a href="#" class="dao-btn dao-btn-primary text-decoration-none rounded-pill">
                             <span><img src="/static/imgs/icon_share.png" alt=""></span>
                             <span>SHARE THIS DAO</span></a>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="bg-white rounded-3 shadow-sm px-5 py-4 mt-4">
                     <ul class="nav">
