--- a/view/daosPage.html
+++ b/view/daosPage.html
@@ -46,20 +46,7 @@
         </div>
         <div class="text-center mt-5"><a class="link-dark text-decoration-none" href="/daosPage?page={{.page}}&tid={{.tid}}">More...</a></div>
     </div>
-    <div class="footer">
-        <h3 class="text-center mb-4">Join the community</h3>
-        <div class="container text-center fs-1">
-            <a class="px-3" href=""><i class="bi bi-twitter"></i></a>
-            <a class="px-3" href=""><i class="bi bi-discord"></i></a>
-            <a class="px-3" href=""><i class="bi bi-medium"></i></a>
-            <a class="px-3" href=""><i class="bi bi-github"></i></a>
-        </div>
-        <div class="container copy border-top mt-5 pt-3 d-flex  justify-content-between">
-            <div class="text-muted f12 ">&copy2021 DAOAtlas </div>
-            <div class="text-muted f12 ">Powered by DAOAtlas Genesis</div>
-
-        </div>
-    </div>
+    {{template "footer.html" .}}
 </body>
 
 </html>
