change jobs.html footer

--- a/view/jobs.html
+++ b/view/jobs.html
@@ -32,20 +32,7 @@
             <p>At genesis we want to learn more about your skills — what can you do for the DAO? Start by introducing yourself and sharing details about your talents to the #intros channel.</p>
         </div>              -->
         <div class="text-center mt-5"><a class="link-dark text-decoration-none" href="/jobs?page={{.page}}">More...</a></div>
-        <h3 class="text-center mb-4 mt-5">Join the community</h3>
-        <div class="container text-center fs-1">
-            <a class="px-3" href="https://twitter.com/DAOAtlas" target="_blank"><i class="bi bi-twitter"></i></a>
-            <a class="px-3" href="https://discord.com/invite/77csYrG5ny" target="_blank"><i class="bi bi-discord"></i></a>
-            <a class="px-3" href=""><i class="bi bi-medium" target="_blank"></i></a>
-            <a  href="" target="_blank">
-                <img src="/static/mirror.png" width="31" height="35"></img>
-            </a>
-            <a class="px-3" href="https://github.com/DAO-collection/DAOatlas"><i class="bi bi-github"target="_blank"></i></a>
-        </div>
-        <div class="container copy border-top mt-5 pt-3 d-flex  justify-content-between">
-            <div class="text-muted f12 ">&copy2021 DAOAtlas </div>
-            <div class="text-muted f12 ">Powered by DAOAtlas Genesis</div>
-        </div>
+        {{template "footer.html" .}}
     </div>
 </body>
 
