delete 3 min read

--- a/view/index.html
+++ b/view/index.html
@@ -27,7 +27,7 @@
                 <a class="text-white  text-decoration-none" href="/view/{{(index .newPosts 0 ).ID}}">
                     <div class="p-4 news-card-1" style="background-image: url('/static/upload/images/20220103/1641218781696.png')">
                         <h5 class="card-title">{{(index .newPosts 0 ).Title}}</h5>
-                        <small>3 min read</small>
+                        <!-- <small>3 min read</small> -->
                         <h2 class="mt-4">New Post Today.</h2>
                     </div>
                 </a>
