--- a/view/daoDetail.html
+++ b/view/daoDetail.html
@@ -152,7 +152,7 @@
                                     <td class="px-3">{{.daoAttr.TokenHolders}}</td>
                                 </tr>
                                 <tr>
-                                    <td class="fw-bold">AUM</td>
+                                    <td class="fw-bold">Assets Under Management</td>
                                     <td class="px-3">{{.daoAttr.AUM}}</td>
                                 </tr>
                                 <tr>
