--- a/view/daosPage.html
+++ b/view/daosPage.html
@@ -35,7 +35,7 @@
                             <h4>{{$v.Title}}</h4>
                             <p class="clr9">{{$v.Members}} Members | Investment</p>
                         </div>
-                        <p class="px-4 p-cnt fs15">{{$v.Content}}</p>
+                        <p class="px-4 p-cnt fs15">{{$v.Summary}}</p>
                         <div class="d-flex justify-content-center more-btn">
                             <a href="/view/{{$v.ID}}" class="read-more px-4 py-2 bg-more text-decoration-none">Read more</a>
                         </div>
