修改：daoDetail布局样式_202201111139

--- a/static/css/front/style.css
+++ b/static/css/front/style.css
@@ -91,4 +91,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
-.kc-cnt1{}
+.kc-cnt1{
+    display: inline-block;
+    max-width: 888px;
+}
