修改：daoDetail布局样式_202201111142

--- a/view/daoDetail.html
+++ b/view/daoDetail.html
@@ -96,7 +96,7 @@
                         <div>
                             <table>
                                 <tr>
-                                    <td class="fw-bold kc-title1">Key Contributors</td>
+                                    <td class="fw-bold kc-title1 vt-al-tp">Key Contributors</td>
                                     <td class="wd-bk">{{.daoAttr.KeyContributors}}</td>
                                 </tr>             
                             </table>
