--- a/view/index.html
+++ b/view/index.html
@@ -94,9 +94,9 @@
                                 <img src="{{$v.Pic}}" alt="">
                             </div>
                             <h4>{{$v.Title}}</h4>
-                            <p class="clr9">{{$v.ID}} Members | Investment</p>
+                            <p class="clr9">{{$v.Members}} Members | Investment</p>
                         </div>
-                        <p class="px-4 p-cnt fs15">{{$v.Content}}</p>
+                        <p class="px-4 p-cnt fs15">{{$v.Summary}}</p>
                         <div class="d-flex justify-content-center more-btn">
                             <a href="/view/{{$v.ID}}" class="read-more px-4 py-2 bg-more text-decoration-none">Read more</a>
                         </div>
