--- a/view/daoDetail.html
+++ b/view/daoDetail.html
@@ -93,7 +93,7 @@
                             <div class="fw-bold kc-title1">Key Contributors</div>
                             <div class="kc-cnt1 wd-bk">{{.daoAttr.KeyContributors}}</div>
                         </div> -->
-                        <div>
+                        <div class="pdlt-3">
                             <table>
                                 <tr>
                                     <td class="fw-bold kc-title1 vt-al-tp">Key Contributors</td>
