--- a/view/events.html
+++ b/view/events.html
@@ -18,14 +18,31 @@
     </div>
     <div class="container page">
         {{range $i, $v := .articleList}}
+
+        <a href="/view/{{$v.ID}}" class="art-a">
         <div class="p-5 bg-white rounded-3 shadow-sm mt-4 lh-lg">
+            <h4 class="mb-4">{{$v.Title}}</h4>
+            <div class="row">
+                <div class="col-md-8 pos-re">
+                    <p class="art-p-cnt">{{$v.Content}}</p>
+                    <!-- <div class="text-muted fs-7 pos-ab">Otc 3 · 3 min read</div>   -->
+                </div>
+                <div class="col-md-4 text-center">
+                    <div class="article-cover">
+                        <img class="img-fluid" src="{{$v.Pic}}" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </a>
+        <!-- <div class="p-5 bg-white rounded-3 shadow-sm mt-4 lh-lg">
             <h4 class="mb-4"><a class="link-dark text-decoration-none" href="">{{$v.Title}}</a></h4>
-            <p>{{$v.Content}} <br/><a href="/view/{{$v.ID}}">read-more</a> </p>
+            <p>{{$v.Content}}</p>
            <div class="d-flex">
             <a class="article-cover" href=""><img class="mr-1" src="{{$v.Pic}}" alt=""></a>
            </div>
-           <div class="text-muted mt-3 fs-7">Otc 3 · 3 min read</div> 
-        </div>
+           <div class="text-muted mt-3 fs-7"><a href="/view/{{$v.ID}}">查看详情</a> </div> 
+        </div> -->
         {{end}}
         <div class="text-center mt-5"><a class="link-dark text-decoration-none" href="/events?page={{.page}}">More...</a></div>        
     
