--- a/static/view/admin_addview.html
+++ b/static/view/admin_addview.html
@@ -111,6 +111,16 @@
                     </div>
                 </div>
 
+                <div class="row cl" v-if="arcdata.scenes == 1">
+                    <label class="form-label col-xs-4 col-sm-2"></label>
+                    <div class="row cl">
+                        <label class="form-label col-xs-4 col-sm-2">content</label>
+                        <div class="formControls col-xs-8 col-sm-9">
+                            <textarea style="width: 100%;padding: 15px;" name="content" id="content" cols="30" v-model="daoAttr.content" rows="10"></textarea>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="row cl" v-if="arcdata.scenes == 2">
                     <label class="form-label col-xs-4 col-sm-2"></label>
                     <div class="formControls col-xs-8 col-sm-9">
@@ -432,7 +442,8 @@
                         url = "/admin/edit/user?type="+that.isuser;  //编辑用户信息
                         this.arcdata.tuijian=3
                     }
-                    this.arcdata.content = b.replace(/(<([^>]+)>)/ig, "").slice(0, 120)
+                    // this.arcdata.content = b.replace(/(<([^>]+)>)/ig, "").slice(0, 120) // Here content was replaced by body
+                    this.arcdata.content = this.daoAttr.content;
                     b = b.replace(/<img ([^>]*)\/>/ig, "<mip-img $1></mip-img>"); //正则替换img的内容到mip图片
                     this.arcdata.body = b.replace(/<img ([^>]*)><\/img>/ig, "<mip-img $1></mip-img>");
 
@@ -440,8 +451,10 @@
                     console.log(this.arcdata);
                     const param = {post_data: this.arcdata}
                     if (scenes == 2) param.dao_attr = this.daoAttr;
+                    console.log(param);
+                    return;
                     
-                    $.ajax({
+                    /*$.ajax({
                         contentType: 'application/json',
                         type: 'POST',
                         url: url,
@@ -460,7 +473,7 @@
                                 layer.msg('更新失败')
                             }
                         }
-                    })
+                    })*/
                 },
             }
             ,
