--- a/view/nav.html
+++ b/view/nav.html
@@ -15,6 +15,15 @@
             <li class="nav-item"><a href="/jobs" class="nav-link {{if eq .tab "jobs"}}active {{end}}link-dark py-4">DAO Jobs</a></li>
             <li class="nav-item"><a href="/about" id="aboutA" class="nav-link {{if eq .tab "about"}}active {{end}}link-dark py-4">About</a></li>                
         </ul>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-8C8RSV22SC"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-8C8RSV22SC');
+        </script>
     </header>
 
     <script type="text/javascript">
